--- a/generators/ci_layout/templates/application_layout.php.erb
+++ b/generators/ci_layout/templates/application_layout.php.erb
@@ -12,6 +12,8 @@
     <div id="header"></div>
     <div id="content"></div>
     <div id="footer"></div>
+<% if use_jquery -%>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
+<% end -%>
   </body>
 </html>
